tests/miniJava/neg/006594_mutation.MiniJava
class java { public static void Main ( String Main ] java ) { { } } }
